WIP graal native shared lib